--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 assets/
 *.class
-new/Algorithms*Part*I/
-new/Algorithms*Part*II/
+new/"Algorithms Part I/"
+new/"Algorithms Part II/"
 
 # compiled files
 bin/
