--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "java.project.sourcePaths": [
     "new/arrays",
+    "new/00-functions",
     "DSA",
-    "new/00-functions"
+    "new/01 - arrays"
   ]
 }
